kube/Networking/demo/ns-demo1.yml
apiVersion: v1
kind: Namespace
metadata:
  name: ns-demo1
  labels:
    user: demo1
