kube/Networking/demo/ns-demo3.yml
apiVersion: v1
kind: Namespace
metadata:
  name: ns-demo3
  labels:
    user: demo3
