kube/Networking/demo/demo1-busybox-without-label.yml
apiVersion: v1
kind: Pod
metadata:
  name: demo1-busybox-without-labels
  namespace: ns-demo1
spec:
  containers:
  - name: busybox
    image: busybox
    command:
      - sleep
      - "3600"
