kube/Networking/demo/demo1-busybox.yml
apiVersion: v1
kind: Pod
metadata:
  name: demo1-busybox
  namespace: ns-demo1
  labels:
    user: demo1
spec:
  containers:
  - name: busybox
    image: busybox
    command:
      - sleep
      - "3600"
