kube/Networking/demo/demo2-busybox.yml
apiVersion: v1
kind: Pod
metadata:
  name: demo2-busybox
  namespace: ns-demo2
  labels:
    user: demo1
spec:
  containers:
  - name: busybox
    image: busybox
    command:
      - sleep
      - "3600"
