kube/Networking/demo/demo3-busybox.yml
apiVersion: v1
kind: Pod
metadata:
  name: demo3-busybox
  namespace: ns-demo3
  labels:
    user: demo3
spec:
  containers:
  - name: busybox
    image: busybox
    command:
      - sleep
      - "3600"
