kube/Networking/demo/networkpolicy-allow-app-2-db.yml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
 name: allow-app-2-db
spec:
 podSelector:
  matchLabels:
    name: mongo
 ingress:
  - from:
     - podSelector:
        matchLabels:
         name: myemp
