kube/Networking/demo/networkpolicy-allow-fe-2-app.yml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
 name: allow-fe-2-app
spec:
 podSelector:
  matchLabels:
    name: myemp
 ingress:
  - from:
     - podSelector:
        matchLabels:
         name: feapp
